--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nivo/bar": "^0.79.1",
+    "@nivo/core": "^0.79.0",
+    "@nivo/pie": "^0.79.1",
     "@types/axios": "^0.14.0",
     "axios": "^0.27.2",
+    "chart.js": "^3.8.0",
     "next": "12.1.6",
     "react": "18.1.0",
+    "react-chartjs-2": "^4.1.0",
     "react-dom": "18.1.0",
+    "react-loader-spinner": "^6.0.0-0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
